--- a/src/components/Admin/Layout.scss
+++ b/src/components/Admin/Layout.scss
@@ -6,5 +6,12 @@
         align-items: center;
         justify-content: space-between;
         padding: 0 15px;
+
+        .header-right{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+        }
     }
 }
