--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,8 +2,8 @@
     display:flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: 10px;
-
+    padding: 10px 0;
+    background-color: white;
     .title{
         color:#1677ff;
         display: flex;
