--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,6 +1,8 @@
 html{
     background-color: rgb(245, 245, 250);
+    overflow-x: hidden;
 }
+
 
 .home-container{
         .customize-row{
@@ -21,7 +23,10 @@ html{
                 box-shadow: 0 0.0625rem 0.125rem 0 rgba(0, 0, 0, .1);
                 border-radius: 0.125rem;
                 padding: .3rem;
-
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-end;
                 .text {
                     padding: 0.5rem 0;
                     font-size: .75rem;
