design order page

--- a/src/pages/book/ViewDetail.scss
+++ b/src/pages/book/ViewDetail.scss
@@ -1,216 +1,232 @@
-.body-container{
-    display: flex;
-    gap: 30px;
-    padding: 30px 30px;
-    margin-top: 30px;
+.body-container {
+    display         : flex;
+    gap             : 30px;
+    padding         : 30px 30px;
+    margin-top      : 30px;
     background-color: white;
-    margin-left: 30px;
-    margin-right: 30px;
-    border-radius: 15px;
-    .image-gallery{
+    margin-left     : 30px;
+    margin-right    : 30px;
+    border-radius   : 15px;
+
+    .image-gallery {
         .image-gallery-content .image-gallery-slide .image-gallery-image {
             max-height: 600px;
-            max-width: 700px;
-            cursor: pointer;
+            max-width : 700px;
+            cursor    : pointer;
         }
 
         .image-gallery-slide .image-gallery-image {
-            width: 100%;
+            width     : 100%;
             object-fit: contain;
         }
 
         .image-gallery-thumbnails {
-            overflow: hidden;
-            padding: 5px 0;
+            overflow : hidden;
+            padding  : 5px 0;
             max-width: 700px;
 
             .image-gallery-thumbnail .image-gallery-thumbnail-image {
                 vertical-align: middle;
-                width: 100%;
-                line-height: 0;
-                cursor: pointer;
+                width         : 100%;
+                line-height   : 0;
+                cursor        : pointer;
             }
         }
     }
-    .content{
+
+    .content {
         flex-grow: 1;
-        .author{
-            font-size: 16px;
+
+        .author {
+            font-size  : 16px;
             font-weight: 500;
             line-height: 24px;
         }
-        .mainText{
-            font-size: 24px;
+
+        .mainText {
+            font-size  : 24px;
             font-weight: 500;
             line-height: 24px;
         }
-        .rating{
-            margin-top: .625rem;
-            min-height: 1.55rem;
-            position: relative;
-            display: flex;
+
+        .rating {
+            margin-top    : .625rem;
+            min-height    : 1.55rem;
+            position      : relative;
+            display       : flex;
             flex-direction: row;
-            .rating-content{
-                display: flex;
-                align-items: center;
+
+            .rating-content {
+                display        : flex;
+                align-items    : center;
                 justify-content: center;
-                padding: 0 15px;
-                .text2{
-                    color: #767676;
-                font-size: 1.3rem;
-                padding: 4px 0;
-                text-transform: capitalize;
+                padding        : 0 15px;
+
+                .text2 {
+                    color         : #767676;
+                    font-size     : 1.3rem;
+                    padding       : 4px 0;
+                    text-transform: capitalize;
                 }
-                .text1{
-                    margin-right: 10px;
-                    color: #222;
-                    font-size: 1.5rem;
+
+                .text1 {
+                    margin-right  : 10px;
+                    color         : #222;
+                    font-size     : 1.5rem;
                     padding-bottom: 1px;
                 }
             }
 
         }
-        .price{
+
+        .price {
             background: #fafafa;
-            padding: 15px 20px;
-            margin: 10px 0;
-            .price-text{
-                color: #ee4d2d;
-                font-size: 1.875rem;
+            padding   : 15px 20px;
+            margin    : 10px 0;
+
+            .price-text {
+                color      : #ee4d2d;
+                font-size  : 1.875rem;
                 font-weight: 500;
                 font-family: Helvetica Neue, Helvetica, Arial, æ–‡æ³‰é©›æ­£é»‘, WenQuanYi Zen Hei, Hiragino Sans GB, å„·é»‘ Pro, LiHei Pro, Heiti TC, å¾®è»Ÿæ­£é»‘é«”, Microsoft JhengHei UI, Microsoft JhengHei, sans-serif;
                 line-height: 1.2;
             }
         }
-        .ship{
-            display: flex;
+
+        .ship {
+            display      : flex;
             margin-bottom: 25px;
-            margin-left: -4px;
-             margin-top: -4px;
-            padding: 4px;
-            .ship-text{
-                color: #757575;
-                flex-shrink: 0;
-                 font-size: inherit;
-                 font-weight: 400;
-                 margin: 0;
-                 text-transform: capitalize;
-                 width: 110px;
-            }
-        }
+            margin-left  : -4px;
+            margin-top   : -4px;
+            padding      : 4px;
 
-        .quantity{
-            display: flex;
-            align-items: center;
-            .quantity-text{
-                color: #757575;
-                flex-shrink: 0;
-                 font-size: inherit;
-                 font-weight: 400;
-                 margin: 0;
-                 text-transform: capitalize;
-                 width: 110px;
-            }
-
-            .quantity-input{
-                display: flex;
-                .quantity-btn1{
-                    align-items: center;
-                    background: transparent;
-                    border: 0;
-                    border: 1px solid rgba(0, 0, 0, .09);
-                    border-radius: 2px;
-                    color: rgba(0, 0, 0, .8);
-                    cursor: pointer;
-                    display: flex;
-                    font-size: .875rem;
-                    font-weight: 300;
-                    height: 32px;
-                    justify-content: center;
-                    letter-spacing: 0;
-                    line-height: 1;
-                    outline: none;
-                    transition: background-color .1s cubic-bezier(.4,0,.6,1);
-                    width: 32px;
-                }
-
-                .quantity-btn2{
-                    -webkit-appearance: none;
-                    border-left: 0;
-                    border-radius: 0;
-                    border-right: 0;
-                    box-sizing: border-box;
-                    cursor: text;
-                    font-size: 16px;
-                    font-weight: 400;
-                    height: 32px;
-                    text-align: center;
-                    width: 50px;
-                }
-            }
-        }
-
-        .buy-group{
-            display: flex;
-            margin-top: 15px;
-            gap: 30px;
-
-            .btn{
-                overflow: hidden;
-                text-overflow: ellipsis;
-                -webkit-line-clamp: 1;
-                align-items: center;
-                border: 0;
-                border-radius: 2px;
-                box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .09);
-                box-sizing: border-box;
-                cursor: pointer;
-                display: flex;
-                flex-direction: column;
-                font-size: 14px;
-                justify-content: center;
-                outline: 0;
+            .ship-text {
+                color         : #757575;
+                flex-shrink   : 0;
+                font-size     : inherit;
+                font-weight   : 400;
+                margin        : 0;
                 text-transform: capitalize;
+                width         : 110px;
             }
-            .add-btn{
-                background: #ff57221a;
-                border: 1px solid #ee4d2d;
-                box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .03);
-                color: #ee4d2d;
-                outline: 0;
-                overflow: visible;
-                position: relative;
-                max-width: 250px;
+        }
 
-                height: 48px;
+        .quantity {
+            display    : flex;
+            align-items: center;
+
+            .quantity-text {
+                color         : #757575;
+                flex-shrink   : 0;
+                font-size     : inherit;
+                font-weight   : 400;
+                margin        : 0;
+                text-transform: capitalize;
+                width         : 110px;
+            }
+
+            .quantity-input {
+                display: flex;
+
+                .quantity-btn1 {
+                    align-items    : center;
+                    background     : transparent;
+                    border         : 0;
+                    border         : 1px solid rgba(0, 0, 0, .09);
+                    border-radius  : 2px;
+                    color          : rgba(0, 0, 0, .8);
+                    cursor         : pointer;
+                    display        : flex;
+                    font-size      : .875rem;
+                    font-weight    : 300;
+                    height         : 32px;
+                    justify-content: center;
+                    letter-spacing : 0;
+                    line-height    : 1;
+                    outline        : none;
+                    transition     : background-color .1s cubic-bezier(.4, 0, .6, 1);
+                    width          : 32px;
+                }
+
+                .quantity-btn2 {
+                    -webkit-appearance: none;
+                    border-left       : 0;
+                    border-radius     : 0;
+                    border-right      : 0;
+                    box-sizing        : border-box;
+                    cursor            : text;
+                    font-size         : 16px;
+                    font-weight       : 400;
+                    height            : 32px;
+                    text-align        : center;
+                    width             : 50px;
+                }
+            }
+        }
+
+        .buy-group {
+            display   : flex;
+            margin-top: 15px;
+            gap       : 30px;
+
+            .btn {
+                overflow          : hidden;
+                text-overflow     : ellipsis;
+                -webkit-line-clamp: 1;
+                align-items       : center;
+                border            : 0;
+                border-radius     : 2px;
+                box-shadow        : 0 1px 1px 0 rgba(0, 0, 0, .09);
+                box-sizing        : border-box;
+                cursor            : pointer;
+                display           : flex;
+                flex-direction    : column;
+                font-size         : 14px;
+                justify-content   : center;
+                outline           : 0;
+                text-transform    : capitalize;
+            }
+
+            .add-btn {
+                background: #ff57221a;
+                border    : 1px solid #ee4d2d;
+                box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .03);
+                color     : #ee4d2d;
+                outline   : 0;
+                overflow  : visible;
+                position  : relative;
+                max-width : 250px;
+
+                height : 48px;
                 padding: 0 20px;
 
-                &:hover{
+                &:hover {
                     background: rgba(255, 197, 178, .181);
                 }
             }
 
-            .buy-btn{
+            .buy-btn {
                 background: #ee4d2d;
-                color: #fff;
-                outline: 0;
-                overflow: visible;
-                position: relative;
-                max-width: 250px;
+                color     : #fff;
+                outline   : 0;
+                overflow  : visible;
+                position  : relative;
+                max-width : 250px;
 
-                height: 48px;
+                height : 48px;
                 padding: 0 20px;
 
-                &:hover{
+                &:hover {
                     background: #f05d40;
                 }
             }
         }
     }
-    .modal-image-gallery{
+
+    .modal-image-gallery {
         .image-gallery-slide-wrapper.right {
             display: inline-block;
-            width: calc(100% - 210px);
+            width  : calc(100% - 210px);
         }
     }
 
@@ -218,11 +234,12 @@
 
 
 
-@media screen and (max-width: 600px){
-    .body-container{
-        display: flex;
+@media screen and (max-width: 600px) {
+    .body-container {
+        display       : flex;
         flex-direction: column;
-        .image-gallery{
+
+        .image-gallery {
             .image-gallery-thumbnails {
                 display: none;
             }
@@ -231,13 +248,13 @@
 
 }
 
-.modal-gallery{
+.modal-gallery {
     .active {
-        border: 2px solid #ee4d2d;
-        position: absolute;
-        width: 100px;
-        height: 100px;
+        border    : 2px solid #ee4d2d;
+        position  : absolute;
+        width     : 100px;
+        height    : 100px;
         box-sizing: border-box;
-        top: 0;
+        top       : 0;
     }
 }
