--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,74 +1,88 @@
-html{
+html {
     background-color: rgb(245, 245, 250);
-    overflow-x: hidden;
+    overflow-x      : hidden;
 }
 
 
-.home-container{
-        .customize-row{
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px 10px;
-            .column{
-                width: calc(20% - 8px);
+.home-container {
+    .phone-sorter {
+        display: none;
+    }
 
-                &:hover {
-                    box-shadow: 0 0.0625rem 20px 0 rgba(0, 0, 0, .05);
-                    -webkit-transform: translateY(-0.0625rem);
-                    transform: translateY(-0.0625rem);
-                }
+    .customize-row {
+        display  : flex;
+        flex-wrap: wrap;
+        gap      : 20px 10px;
 
-                .wrapper{
-                    cursor: pointer;
-                box-shadow: 0 0.0625rem 0.125rem 0 rgba(0, 0, 0, .1);
-                border-radius: 0.125rem;
-                padding: .3rem;
-                height: 100%;
-                display: flex;
-                flex-direction: column;
+        .column {
+            width: calc(20% - 8px);
+
+            &:hover {
+                box-shadow       : 0 0.0625rem 20px 0 rgba(0, 0, 0, .05);
+                -webkit-transform: translateY(-0.0625rem);
+                transform        : translateY(-0.0625rem);
+            }
+
+            .wrapper {
+                cursor         : pointer;
+                box-shadow     : 0 0.0625rem 0.125rem 0 rgba(0, 0, 0, .1);
+                border-radius  : 0.125rem;
+                padding        : .3rem;
+                height         : 100%;
+                display        : flex;
+                flex-direction : column;
                 justify-content: flex-end;
+
                 .text {
-                    padding: 0.5rem 0;
+                    padding  : 0.5rem 0;
                     font-size: .75rem;
                 }
 
                 .rating {
-                    display: flex;
+                    display    : flex;
                     align-items: center;
-                    gap: 10px;
-                }
-                }
-            }
-
-            .thumbnail {
-                max-height: 200px;
-                max-width: 200px;
-                margin: 0 auto;
-
-                img {
-                    max-width: 100%;
-                    width: 200px;
-                    max-height: inherit;
-                    background-color: white;
-                    object-fit: contain;
-                }
-            }
-
-            @media screen and (max-width: 600px) {
-                .column {
-                    flex: unset;
-                    width: calc(50% - 8px);
-                    flex-wrap: wrap;
-                }
-            }
-
-            @media screen and (max-width: 800px) and (min-width: 601px) {
-                .column {
-                    flex: unset;
-                    width: calc(25% - 8px);
-                    flex-wrap: wrap;
+                    gap        : 10px;
                 }
             }
         }
 
+        .thumbnail {
+            max-height: 200px;
+            max-width : 200px;
+            margin    : 0 auto;
+
+            img {
+                max-width       : 100%;
+                width           : 200px;
+                max-height      : inherit;
+                background-color: white;
+                object-fit      : contain;
+            }
+        }
+
+        @media screen and (max-width: 600px) {
+            .column {
+                flex     : unset;
+                width    : calc(50% - 8px);
+                flex-wrap: wrap;
+            }
+        }
+
+        @media screen and (max-width: 800px) and (min-width: 601px) {
+            .column {
+                flex     : unset;
+                width    : calc(25% - 8px);
+                flex-wrap: wrap;
+            }
+        }
     }
+
+}
+
+@media screen and (max-width: 800px) {
+    .home-container{
+        .phone-sorter{
+            display: flex;
+        }
+    }
+}
