--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -2,7 +2,7 @@ footer {
     bottom: 0;
     width: 100%;
     height: 50px;
-    position: fixed;
+    position: relative;
     text-align: center;
     line-height: 50px;
 }
