--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -17,6 +17,7 @@
         align-items     : center;
         gap             : 10px;
         justify-content : space-between;
+        flex-wrap: wrap;
 
         .mainText {
             height         : 100%;
